cppcheck_report.txt
3. Implementation/Multifile/dungeon.cpp:77:9: error: Array 'room[100]' accessed at index 100, which is out of bounds. [arrayIndexOutOfBounds]
    room[100]=room[0];
        ^
3. Implementation/Multifile/main.cpp:76:9: error: Array 'room[100]' accessed at index 100, which is out of bounds. [arrayIndexOutOfBounds]
    room[100]=room[0];
        ^
nofile:0:0: information: Cppcheck cannot find all the include files (use --check-config for details) [missingIncludeSystem]

